[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/open_kanban/system/context_menu.gd" type="Script" id=1]
[ext_resource path="res://addons/open_kanban/system/tool_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/open_kanban/res/boxes/dark_outer.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/open_kanban/res/boxes/inner.tres" type="StyleBox" id=5]
[ext_resource path="res://addons/open_kanban/res/boxes/inner_pressed.tres" type="StyleBox" id=6]

[node name="context_menu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -144.0
margin_right = 123.0
margin_bottom = 144.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 233.0
margin_bottom = 276.0
rect_min_size = Vector2( 221, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 6

[node name="edit" parent="vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 221.0
margin_bottom = 48.0
rect_min_size = Vector2( 221, 48 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "编辑"
align = 0
OTS_ID = "EDIT"

[node name="duplicate" parent="vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 221.0
margin_bottom = 102.0
rect_min_size = Vector2( 221, 48 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "复制"
align = 0
OTS_ID = "DUPLICATE"

[node name="insert_before" parent="vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 221.0
margin_bottom = 156.0
rect_min_size = Vector2( 221, 48 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "在前插入"
align = 0
OTS_ID = "INSERT_BEFORE"

[node name="insert_after" parent="vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 221.0
margin_bottom = 210.0
rect_min_size = Vector2( 221, 48 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "在后插入"
align = 0
OTS_ID = "INSERT_AFTER"

[node name="delete" parent="vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 216.0
margin_right = 221.0
margin_bottom = 264.0
rect_min_size = Vector2( 221, 48 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "删除"
align = 0
OTS_ID = "DELETE"

[connection signal="pressed" from="vbox/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="vbox/edit" to="." method="exit"]
[connection signal="pressed" from="vbox/duplicate" to="." method="_on_duplicate_pressed"]
[connection signal="pressed" from="vbox/duplicate" to="." method="exit"]
[connection signal="pressed" from="vbox/insert_before" to="." method="_on_insert_before_pressed"]
[connection signal="pressed" from="vbox/insert_before" to="." method="exit"]
[connection signal="pressed" from="vbox/insert_after" to="." method="_on_insert_after_pressed"]
[connection signal="pressed" from="vbox/insert_after" to="." method="exit"]
[connection signal="pressed" from="vbox/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="vbox/delete" to="." method="exit"]
